--- a/options/train/basicpbc_pbch_train_option.yml
+++ b/options/train/basicpbc_pbch_train_option.yml
@@ -2,7 +2,7 @@
 name: basicpbc_pbch_train
 model_type: PBCModel
 scale: 1
-num_gpu: 2  # set num_gpu: 0 for cpu mode
+num_gpu: 2 # set num_gpu: 0 for cpu mode
 manual_seed: 42
 
 # dataset and data loader settings
@@ -19,7 +19,7 @@ datasets:
     merge_label_prob: 0.2
     shuffle_label: false
     color_redistribution_type: seg
-    frame_distance_list: [0,1,2]
+    frame_distance_list: [0, 1, 2]
 
     # data loader
     use_shuffle: true
@@ -43,7 +43,6 @@ network_g:
   descriptor_dim: 128
   keypoint_encoder: [32, 64, 128]
   GNN_layer_num: 9
-  use_clip: true
 
 # path
 path:
@@ -58,15 +57,15 @@ train:
     lr: !!float 1e-4
     weight_decay: 0
     betas: [0.9, 0.999]
-  
+
   scheduler:
     type: MultiStepLR
     milestones: [80000]
     gamma: 0.1
-  
+
   ema_decay: 0.9
   total_iter: 800000
-  warmup_iter: -1  # no warm up
+  warmup_iter: -1 # no warm up
 
   # losses
   l_ce:
