--- a/basicsr/requirements.txt
+++ b/basicsr/requirements.txt
@@ -2,5 +2,6 @@ basicsr
 numpy
 opencv-python
 requests
-torch
-torchvision
+torch==2.3.1+cu121
+torchvision==0.14.1+cu121
+--extra-index-url https://download.pytorch.org/whl/cu121
