--- a/quickstart.yaml
+++ b/quickstart.yaml
@@ -4,6 +4,7 @@ import:
     git:
       url: github.com/chilli-somanyjuice/AnimeColorization.git
       ref: main
+  /root/dataset/: volume://vessl-storage/BasicPBC
 resources:
   cluster: snu-eng-dgx
   preset: a100-1
@@ -15,6 +16,9 @@ image: quay.io/vessl-ai/torch:2.3.1-cuda12.1-r5
 run: |-
   pip install -r requirements.txt
   python setup.py develop
-  pip uninstall opencv-python
-  pip install opencv-python
+  apt-get update
+  apt-get install ffmpeg libsm6 libxext6  -y
+  pip install torch-scatter
+  pip install matplotlib
+  unzip dataset/BasicPBC/PaintBucket_Char.zip
   python basicsr/train.py -opt options/train/basicpbc_pbch_train_option.yml
