--- a/quickstart.yaml
+++ b/quickstart.yaml
@@ -17,7 +17,7 @@ run: |-
   pip install -r requirements.txt
   python setup.py develop
   apt-get update
-  apt-get install ffmpeg libsm6 libxext6  -y
+  apt-get install ffmpeg libsm6 libxext6 unzip -y
   pip install torch-scatter
   pip install matplotlib
   unzip dataset/BasicPBC/PaintBucket_Char.zip
