--- a/options/train/basicpbc_pbch_train_option.yml
+++ b/options/train/basicpbc_pbch_train_option.yml
@@ -26,6 +26,7 @@ datasets:
     use_shuffle: true
     num_worker_per_gpu: 4
     batch_size_per_gpu: 1
+    accumulation_steps: 4
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
   val:
