--- a/basicsr/requirements.txt
+++ b/basicsr/requirements.txt
@@ -4,4 +4,6 @@ opencv-python
 requests
 torch==2.3.1+cu121
 torchvision==0.14.1+cu121
+torch-scatter
+matplotlib
 --extra-index-url https://download.pytorch.org/whl/cu121
